fix skills page on firefox

--- a/public/stylesheets/sass/style.scss
+++ b/public/stylesheets/sass/style.scss
@@ -399,7 +399,7 @@ body {
 				}
 
 				td:last-child {
-					height: 130px;
+					height: 133px;
 				}
 			}
 		}
